2007-08-04  Denis Washington  <denisw@svn.gnome.org>

	* appearance-style.c: (prepare_list):
	Only add a "Default Pointer" list item if there is
	no such GnomeThemeCursorInfo.


2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-themes.c: (theme_thumbnail_update): oops, remove
	left-over devel ifdef

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_color_changed): use gdk_color_to_string
	instead of g_strdup_printf
	* gnome-wp-xml.c: (gnome_wp_xml_load_xml),
	(gnome_wp_xml_load_list): remove check for old glib version that
	would result in bogus code, and save an unnecessary alloc

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_props_load_wallpaper), (wp_add_image),
	(wp_scale_type_changed), (wp_shade_type_changed),
	(wp_update_preview), (wp_load_stuffs), (desktop_init),
	(desktop_shutdown):
	* appearance-main.c: (init_appearance_data),
	(main_window_response):
	* appearance-themes.c: (theme_get_mtime), (theme_thumbnail_update),
	(theme_get_thumbnail_from_cache), (theme_thumbnail_done_cb),
	(theme_thumbnail_generate):
	* appearance.h:
	* gnome-wp-xml.c: (gnome_wp_load_legacy), (gnome_wp_xml_load_xml):
	use thumbnail factory to store and retrieve metatheme thumbs
	(bug #448968)

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* data/appearance.glade:
	* data/theme-thumbnailing.png: reduce metatheme thumbnail size to
	128x128 in preparation of using gnome-thumbnail-factory

2007-08-03  Jens Granseuer  <jensgr@gmx.net>

	* appearance-style.c: (color_button_clicked_cb): simplify

2007-08-01  Thomas Wood  <thos@gnome.org>

	Path by: Dennis Cranston <dennis_cranston@yahoo.com>

	* data/appearance.glade:  Add a few more mnemonics.  HIG capitalization 
	  fix for a checkbutton label.

2007-07-31  Jens Granseuer  <jensgr@gmx.net>

	* appearance-desktop.c: (wp_file_open_dialog), (desktop_init):
	* appearance.h: add a shortcut to the user's special Pictures folder to