@@ -1,9 +1,15 @@
+2007-08-04  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Dennis Cranston <dennis_cranston@yahoo.com>
+
+        * appearance-style.c: (update_cursor_size_scale) Toggle
+        sensitivity of the cursor scale labels (bug #463442)
+
 2007-08-04  Denis Washington  <denisw@svn.gnome.org>
 
 	* appearance-style.c: (prepare_list):
 	Only add a "Default Pointer" list item if there is
 	no such GnomeThemeCursorInfo.
-
 
 2007-08-03  Jens Granseuer  <jensgr@gmx.net>
 
